--- a/basroba/app/templates/product.html
+++ b/basroba/app/templates/product.html
@@ -33,9 +33,8 @@
 {% endblock %}
 
 {% block body %}
-<form class="section1" onsubmit="return false;"> <!-- prevent reload -->
+<form class="section1" onsubmit="return false;">
 
-    <!-- Product Images -->
     <div class="pictures-div">
         <div class="other-pics">
             {% for img in product_images %}
@@ -47,7 +46,6 @@
         <img src="{{ product.Product_image1.url }}" class="main-picture" alt="{{ product.Product_name }}">
     </div>
 
-    <!-- Main Product Info -->
     <div class="main-part">
         <h1 class="product-title">{{ product.Product_name }}</h1>
         <h1 class="product-category">{{ product.Product_Category }}</h1>
@@ -70,7 +68,6 @@
 
         <br>
 
-        <!-- Colors -->
         <div class="color-picker">
             {% for color in product_colors %}
                 <input type="radio" id="color{{ color.id }}" name="color" value="{{ color }}" {% if forloop.first %}checked{% endif %}>
@@ -110,7 +107,8 @@
                 <a href="{% url 'login' %}?next={{ request.path }}">
                     <button class="first-button favorite-button2" type="button">ფავორიტად არჩევა</button>
                 </a>
-                <a href="{% url 'login' %}?next={{ request.path }}">
+
+                <a href="{% url 'login' %}?next={{ request.path }}" class="unnessesary-link-style">
                     <button class="second-button add-to-cart-button2" type="button">კალათაში დამატება</button>
                 </a>
             </div>
@@ -131,7 +129,7 @@ function showMessage(text, type="success") {
 
 function getSelectedVariant() {
     const colorInput = document.querySelector('input[name="color"]:checked');
-    const sizeButton = document.querySelector('.size-button.selected');
+    const sizeButton = document.querySelector('.size-button.selected2');
     return {
         color: colorInput ? colorInput.value : null,
         size: sizeButton ? sizeButton.dataset.size : null
@@ -256,8 +254,8 @@ function toggleFavorite(inFav) {
 // Event listeners for variant selection
 document.querySelectorAll('.size-button').forEach(btn => {
     btn.addEventListener('click', () => {
-        document.querySelectorAll('.size-button').forEach(b => b.classList.remove('selected'));
-        btn.classList.add('selected');
+        document.querySelectorAll('.size-button').forEach(b => b.classList.remove('selected2'));
+        btn.classList.add('selected2');
         updateButtons();
     });
 });
