--- a/basroba/app/templates/products.html
+++ b/basroba/app/templates/products.html
@@ -7,11 +7,12 @@
 
 
 {% block title %}
+    Products
 {% endblock %}
 
 {% block body %}
     <section class="section2">
-        <h2 class="section2-title">პროდუქცები</h2>
+        <h2 class="section2-title">PRODUCTS</h2>
         
         <div class="products-div">
             {% for product in all_products %}
