--- a/basroba/app/static/css/favorites.css
+++ b/basroba/app/static/css/favorites.css
@@ -1,6 +1,9 @@
 .product-card {
-            background-color: #1a1a1a;
-            border-radius: 8px;
+    width: calc(90% - 40px);
+    left: 5%;
+    margin-left: 0;
+    position: relative;
+            background-color: white;
             padding: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             display: flex;
@@ -19,10 +22,10 @@
         .product-title {
             font-size: 1.2rem;
             font-weight: bold;
-            color: #fff;
+            color: black;
         }
         .product-details {
-            color: #ccc;
+            color: black;
             margin-top: 10px;
         }
         .btn-heart {
@@ -46,3 +49,22 @@
             background-color: #333;
             color: #fff;
         }
+
+@media screen and (max-width: 600px) {
+    .product-card {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .product-card img {
+        max-width: 100%;
+        margin-bottom: 10px;
+    }
+    .product-info {
+        padding-left: 0;
+    }
+    .btn-heart {
+        align-self: flex-end;
+        margin-top: 10px;
+    }
+    
+}
