--- a/basroba/app/static/css/product.css
+++ b/basroba/app/static/css/product.css
@@ -80,7 +80,7 @@
     margin: 0;
     font-size: 25px;
     font-weight: bold;
-    color: white;
+    color: black;
 }
 
 .product-category {
@@ -93,7 +93,7 @@
     margin: 0;
     font-size: 18px;
     font-weight: bold;
-    color: white;
+    color: black;
 }
 
 .old-price1 {
@@ -104,6 +104,7 @@
     height: max-content;
     margin-top: 10px;
     margin-bottom: 10px;
+    color: gray;
 }
 
 .old-price2 {
@@ -116,7 +117,7 @@
     padding: 0;
     margin-left: 0px;
     margin-right: 5px;
-    color: #797979;
+    color: gray;
     display: inline-block;
 }
 
@@ -137,7 +138,7 @@
     height: max-content;
     margin: 0;
     padding: 0;
-    color: white;
+    color: black;
     display: inline-block;
     margin-left: 15px;
     font-weight: bold;
@@ -153,7 +154,7 @@
     margin: 0;
     font-size: 20px;
     font-weight: bold;
-    color: white;
+    color: black;
 }
 
 .rating-div {
@@ -194,7 +195,7 @@
     left: 0;
     width: 100%;
     height: max-content;
-    border: 2px solid white;
+    border: 2px solid black;
     margin-bottom: 20px;
     margin-top: 20px;
 }
@@ -215,7 +216,7 @@
     height: max-content;
     font-size: 20px;
     font-weight: bold;
-    color: white;
+    color: black;
     padding: 0;
     margin: 0;
 }
@@ -243,12 +244,12 @@
     border-radius: 50%;
     display: inline-block;
     cursor: pointer;
-    border: 3px solid transparent;
+    border: 1px solid gray;
     transition: 0.2s;
 }
 
 .color-picker input[type="radio"]:checked + label {
-    border: 5px solid white;
+    border: 4px solid rgb(0, 0, 0);
 }
 
 .red       { background: #FF6F6F; }
@@ -291,7 +292,7 @@
 
 .size-selector {
     text-align: center;
-    color: #fff;
+    color: black;
 }
 
 .size-label h1 {
@@ -312,8 +313,8 @@
 
 .size-button {
     background-color: transparent;
-    border: 2px solid #fff;
-    color: #fff;
+    border: 2px solid #000000;
+    color: black;
     font-size: 16px;
     padding: 10px 20px;
     cursor: pointer;
@@ -321,12 +322,18 @@
 }
 
 .size-button:hover {
-    background-color: #fff;
+    background-color: #d1d1d1;
     color: #222;
 }
 
 .selected {
-    background-color: #fff;
+    color: #222;
+    pointer-events: none;
+    border: 2px solid #222;
+}
+
+.selected2 {
+    background-color: #d1d1d1;
     color: #222;
     pointer-events: none;
 }
@@ -384,6 +391,10 @@
     font-size: 20px;
 }
 
+.unnessesary-link-style {
+    grid-column: 3;
+}
+
 @media screen and (max-width: 900px) {
     .section1 {
         grid-template-columns: 100%;
@@ -423,6 +434,10 @@
 
     .pictures-div {
         grid-template-columns: 80px 5px calc(100% - 85px);
+    }
+
+    .unnessesary-link-style {
+        grid-column: 1;
     }
 }
 
