--- a/basroba/app/templates/profile.html
+++ b/basroba/app/templates/profile.html
@@ -17,13 +17,13 @@
         <input type="text" placeholder="First Name" id="first_name22" value="{{ user_info.first_name }}" required>
         <input type="text" placeholder="Last Name" id="last_name22" value="{{ user_info.last_name }}" required>
         <input type="number" placeholder="Phone Number" id="phone_number22" value="{{ user_info.phone_number }}" required>
-        <input type="text" placeholder="Street Address 1" id="street_address122" value="{{ user_info.street_address1 }}" required>
-        <input type="text" placeholder="Street Address 2" id="street_address222" value="{{ user_info.street_address2 }}">
-        <input type="text" placeholder="City" id="city22" value="{{ user_info.city }}" required>
-        <input type="text" placeholder="State/Region" id="state_region22" value="{{ user_info.State_Region }}" required>
-        <input type="number" placeholder="ZIP Code" id="zip_code22" value="{{ user_info.ZIP_code }}" required>
-        <input type="text" placeholder="Country" id="country22" value="{{ user_info.country }}" required>
-        <input type="number" placeholder="Phone Code" id="phone_code22" value="{{ user_info.phone_code }}" required>
+        <input type="text" placeholder="Street Address 1" id="street_address122" value="" required>
+        <input type="text" placeholder="Street Address 2" id="street_address222" value="">
+        <input type="text" placeholder="City" id="city22" value="" required>
+        <input type="text" placeholder="State/Region" id="state_region22" value="" required>
+        <input type="number" placeholder="ZIP Code" id="zip_code22" value="" required>
+        <input type="text" placeholder="Country" id="country22" value="" required>
+        <input type="number" placeholder="Phone Code" id="phone_code22" value="" required>
         <button onclick="add_address()" type="button">💾 Save</button>
     </form>
 </div>
