--- a/basroba/app/templates/profile.html
+++ b/basroba/app/templates/profile.html
@@ -32,9 +32,8 @@
     <div class="container-back" id="address-form-back2"></div>
     <form class="container-front">
         <h1>Add Address</h1>
-        <input type="text" placeholder="First Name" id="first_name222" value="{{ user_info.first_name }}" required>
-        <input type="text" placeholder="Last Name" id="last_name222" value="{{ user_info.last_name }}" required>
-        <input type="number" placeholder="Phone Number" id="phone_number222" value="{{ user_info.phone_number }}" required>
+        <input type="text" placeholder="Full Name" id="full_name222" value="" required>
+        <input type="number" placeholder="Phone Number" id="phone_number222" value="" required>
         <input type="text" placeholder="Street Address 1" id="street_address122" value="" required>
         <input type="text" placeholder="Street Address 2" id="street_address222" value="">
         <input type="text" placeholder="City" id="city222" value="" required>
