--- a/basroba/app/templates/profile.html
+++ b/basroba/app/templates/profile.html
@@ -41,7 +41,7 @@
         <input type="number" placeholder="ZIP Code" id="zip_code222" value="" required>
         <input type="text" placeholder="Country" id="country222" value="" required>
         <input type="number" placeholder="Phone Code" id="phone_code222" value="" required>
-        <button onclick="change_address(`{{ address.id }}`)" type="button">💾 Save</button>
+        <button onclick="change_address()" type="button">💾 Save</button>
     </form>
 </div>
 
