--- a/basroba/app/templates/products.html
+++ b/basroba/app/templates/products.html
@@ -20,7 +20,7 @@
                     <div class="product-card">
                         <img src="{{ product.Product_image1.url }}" class="product-image" alt="">
                         <h3 class="product-text">{{ product.Product_name }}</h3>
-                        {% if product.Product_XS == 0 and product.Product_S == 0 and product.Product_M == 0 and product.Product_L == 0 and product.Product_XL == 0 and product.Product_2XL == 0 and product.Product_3XL == 0 and product.Product_4XL == 0 and product.Product_5XL == 0 %}
+                        {% if not product.Product_XS and not product.Product_S and not product.Product_M and not product.Product_L and not product.Product_XL and not product.Product_2XL and not product.Product_3XL and not product.Product_4XL and not product.Product_5XL %}
                             <p class="product-price" style="color: red;">Sold Out</p>
                         {% else %}
                             <p class="product-price">{{ product.Product_price_new }} ₾</p>
