--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -24,9 +24,9 @@
                         <a href="{% url 'products' category_name='all' %}" class="nav nav1">About Us</a>
                         <a href="{% url 'products' category_name='all' %}" class="nav nav1">Contact</a>
                         {% if user.is_authenticated %}
-                            <a href="{% url 'profile' %}" class="nav nav4">Profile</a>
-                            <a href="{% url 'cart' %}" class="nav nav5">Cart</a>
-                            <a href="{% url 'favorites' %}" class="nav nav6">Favorites</a>
+                            <a href="{% url 'profile' %}" class="nav nav4">{% trans "Profile" %}</a>
+                            <a href="{% url 'cart' %}" class="nav nav5">{% trans "Cart" %}</a>
+                            <a href="{% url 'favorites' %}" class="nav nav6">{% trans "Favorites" %}</a>
                         {% else %}
                             <a href="{% url 'login' %}" class="nav nav4">Register</a>
                         {% endif %}
