--- a/basroba/app/static/css/layout.css
+++ b/basroba/app/static/css/layout.css
@@ -186,7 +186,7 @@ nav {
     margin: 0;
     font-size: 20px;
     font-weight: normal;
-    color: white;
+    color: black;
     text-decoration: none;
     display: inline-block;
 }
